js/js.translator/testData/incremental/invalidationWithPL/removeInlineFunction/lib1/l1b.0.kt
inline fun inlineFoo(f: () -> Int) = f() + 1
